[gd_scene load_steps=60 format=2]

[ext_resource path="res://assets/images/bat/01-Idle/__Bat02_Idle_005.png" type="Texture" id=1]
[ext_resource path="res://assets/images/bat/01-Idle/__Bat02_Idle_000.png" type="Texture" id=2]
[ext_resource path="res://assets/images/bat/01-Idle/__Bat02_Idle_004.png" type="Texture" id=3]
[ext_resource path="res://assets/images/bat/01-Idle/__Bat02_Idle_008.png" type="Texture" id=4]
[ext_resource path="res://assets/images/bat/01-Idle/__Bat02_Idle_007.png" type="Texture" id=5]
[ext_resource path="res://assets/images/bat/01-Idle/__Bat02_Idle_002.png" type="Texture" id=6]
[ext_resource path="res://assets/images/bat/01-Idle/__Bat02_Idle_011.png" type="Texture" id=7]
[ext_resource path="res://assets/images/bat/01-Idle/__Bat02_Idle_001.png" type="Texture" id=8]
[ext_resource path="res://assets/images/bat/01-Idle/__Bat02_Idle_003.png" type="Texture" id=9]
[ext_resource path="res://assets/images/bat/01-Idle/__Bat02_Idle_006.png" type="Texture" id=10]
[ext_resource path="res://assets/images/bat/01-Idle/__Bat02_Idle_010.png" type="Texture" id=11]
[ext_resource path="res://assets/images/bat/01-Idle/__Bat02_Idle_009.png" type="Texture" id=12]
[ext_resource path="res://assets/images/bat/02-Fly/__Bat02_Fly_005.png" type="Texture" id=13]
[ext_resource path="res://assets/images/bat/02-Fly/__Bat02_Fly_002.png" type="Texture" id=14]
[ext_resource path="res://assets/images/bat/02-Fly/__Bat02_Fly_000.png" type="Texture" id=15]
[ext_resource path="res://assets/images/bat/02-Fly/__Bat02_Fly_001.png" type="Texture" id=16]
[ext_resource path="res://assets/images/bat/02-Fly/__Bat02_Fly_003.png" type="Texture" id=17]
[ext_resource path="res://assets/images/bat/02-Fly/__Bat02_Fly_004.png" type="Texture" id=18]
[ext_resource path="res://assets/images/bat/02-Fly/__Bat02_Fly_007.png" type="Texture" id=19]
[ext_resource path="res://assets/images/bat/02-Fly/__Bat02_Fly_006.png" type="Texture" id=20]
[ext_resource path="res://assets/images/bat/03-Attack/__Bat02_Attack_000.png" type="Texture" id=21]
[ext_resource path="res://assets/images/bat/05-Die/__Bat02_Die_000.png" type="Texture" id=22]
[ext_resource path="res://assets/images/bat/04-Hurt/FadeFX/__Bat02_Hurt_000.png" type="Texture" id=23]
[ext_resource path="res://assets/images/bat/04-Hurt/FadeFX/__Bat02_Hurt_002.png" type="Texture" id=24]
[ext_resource path="res://assets/images/bat/04-Hurt/FadeFX/__Bat02_Hurt_005.png" type="Texture" id=25]
[ext_resource path="res://assets/images/bat/04-Hurt/FadeFX/__Bat02_Hurt_003.png" type="Texture" id=26]
[ext_resource path="res://assets/images/bat/03-Attack/__Bat02_Attack_005.png" type="Texture" id=27]
[ext_resource path="res://assets/images/bat/05-Die/__Bat02_Die_001.png" type="Texture" id=28]
[ext_resource path="res://assets/images/bat/05-Die/__Bat02_Die_005.png" type="Texture" id=29]
[ext_resource path="res://assets/images/bat/03-Attack/__Bat02_Attack_007.png" type="Texture" id=30]
[ext_resource path="res://assets/images/bat/04-Hurt/FadeFX/__Bat02_Hurt_001.png" type="Texture" id=31]
[ext_resource path="res://assets/images/bat/03-Attack/__Bat02_Attack_002.png" type="Texture" id=32]
[ext_resource path="res://assets/images/bat/03-Attack/__Bat02_Attack_006.png" type="Texture" id=33]
[ext_resource path="res://assets/images/bat/04-Hurt/FadeFX/__Bat02_Hurt_004.png" type="Texture" id=34]
[ext_resource path="res://assets/images/bat/03-Attack/__Bat02_Attack_001.png" type="Texture" id=35]
[ext_resource path="res://assets/images/bat/03-Attack/__Bat02_Attack_003.png" type="Texture" id=36]
[ext_resource path="res://assets/images/bat/05-Die/__Bat02_Die_004.png" type="Texture" id=37]
[ext_resource path="res://assets/images/bat/05-Die/__Bat02_Die_006.png" type="Texture" id=38]
[ext_resource path="res://assets/images/bat/05-Die/__Bat02_Die_007.png" type="Texture" id=39]
[ext_resource path="res://assets/images/bat/05-Die/__Bat02_Die_002.png" type="Texture" id=40]
[ext_resource path="res://assets/images/bat/05-Die/__Bat02_Die_003.png" type="Texture" id=41]
[ext_resource path="res://assets/images/bat/03-Attack/__Bat02_Attack_004.png" type="Texture" id=42]
[ext_resource path="res://assets/images/bat/04-Hurt/FadeFX/__Bat02_Hurt_007.png" type="Texture" id=43]
[ext_resource path="res://assets/images/bat/04-Hurt/FadeFX/__Bat02_Hurt_006.png" type="Texture" id=44]
[ext_resource path="res://scenes/enemies/air_enemy.gd" type="Script" id=45]
[ext_resource path="res://behavior_tree/blackboard.gd" type="Script" id=46]
[ext_resource path="res://behavior_tree/behavior_tree.gd" type="Script" id=47]
[ext_resource path="res://behavior_tree/leaves/bt_call_simple_func.gd" type="Script" id=48]
[ext_resource path="res://behavior_tree/composite/behavior_tree_selector.gd" type="Script" id=49]
[ext_resource path="res://behavior_tree/composite/behavior_tree_sequence.gd" type="Script" id=50]
[ext_resource path="res://behavior_tree/leaves/bt_check_blackboard_prop.gd" type="Script" id=51]
[ext_resource path="res://scenes/enemies/behavior_tree_actions/move_towards_player.gd" type="Script" id=52]
[ext_resource path="res://scenes/enemies/behavior_tree_actions/turn_towards_player.gd" type="Script" id=53]
[ext_resource path="res://scenes/enemies/player_detection_area.tscn" type="PackedScene" id=58]
[ext_resource path="res://behavior_tree/leaves/bt_set_blackboard_from_prop.gd" type="Script" id=59]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 36 ), ExtResource( 42 ), ExtResource( 27 ), ExtResource( 33 ), ExtResource( 30 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 28 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 37 ), ExtResource( 29 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": false,
"name": "dead",
"speed": 15.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 31 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 34 ), ExtResource( 25 ), ExtResource( 44 ), ExtResource( 43 ) ],
"loop": true,
"name": "hurt",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 38.7811

[sub_resource type="CircleShape2D" id=3]
radius = 350.0

[sub_resource type="CircleShape2D" id=4]
radius = 48.0

[node name="AirEnemy" type="KinematicBody2D"]
script = ExtResource( 45 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PlayerNearDetectionArea" parent="." instance=ExtResource( 58 )]

[node name="CollisionShape2D" parent="PlayerNearDetectionArea" index="0"]
shape = SubResource( 3 )

[node name="PlayerCloseDetectionArea" parent="." instance=ExtResource( 58 )]

[node name="CollisionShape2D" parent="PlayerCloseDetectionArea" index="0"]
shape = SubResource( 4 )

[node name="BehaviorTree" type="Node" parent="."]
script = ExtResource( 47 )
agent = NodePath("..")
blackboard = NodePath("../BlackBoard")

[node name="BTSequence" type="Node" parent="BehaviorTree"]
script = ExtResource( 50 )

[node name="RecordIsDyingToBlackboard" type="Node" parent="BehaviorTree/BTSequence"]
script = ExtResource( 59 )
node = NodePath("../../..")
node_property_or_function_name = "is_dying"

[node name="RecordPlayerIsNearToBlackboard" type="Node" parent="BehaviorTree/BTSequence"]
script = ExtResource( 59 )
node = NodePath("../../../PlayerNearDetectionArea")
node_property_or_function_name = "player_is_in_area"
blackboard_property_name = "player_is_near"

[node name="RecordPlayerIsCloseToBlackboard" type="Node" parent="BehaviorTree/BTSequence"]
script = ExtResource( 59 )
node = NodePath("../../../PlayerCloseDetectionArea")
node_property_or_function_name = "player_is_in_area"
blackboard_property_name = "player_is_close"

[node name="DoOneOfTheseActions" type="Node" parent="BehaviorTree/BTSequence"]
script = ExtResource( 49 )

[node name="DeathAnimationIfDying" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions"]
script = ExtResource( 50 )

[node name="IsDying" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/DeathAnimationIfDying"]
script = ExtResource( 51 )
blackboard_property_name = "is_dying"

[node name="Die" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/DeathAnimationIfDying"]
script = ExtResource( 48 )
node = NodePath("../../../../..")
node_function_name = "die"

[node name="AttackPlayerIfClose" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions"]
script = ExtResource( 50 )

[node name="CheckIfPlayerClose" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/AttackPlayerIfClose"]
script = ExtResource( 51 )
blackboard_property_name = "player_is_close"

[node name="Attack" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/AttackPlayerIfClose"]
script = ExtResource( 48 )
node = NodePath("../../../../..")
node_function_name = "attack"

[node name="ChasePlayerIfNear" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions"]
script = ExtResource( 50 )

[node name="CheckIfPlayerNear" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/ChasePlayerIfNear"]
script = ExtResource( 51 )
blackboard_property_name = "player_is_near"

[node name="TurnTowardsPlayer" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/ChasePlayerIfNear"]
script = ExtResource( 53 )

[node name="MoveTowardsPlayer" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/ChasePlayerIfNear"]
script = ExtResource( 52 )

[node name="Idle" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions"]
script = ExtResource( 48 )
node = NodePath("../../../..")
node_function_name = "idle"

[node name="BlackBoard" type="Node" parent="."]
script = ExtResource( 46 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[editable path="PlayerNearDetectionArea"]
[editable path="PlayerCloseDetectionArea"]
